try to fix topprofile display on mobile

--- a/react-blog/src/components/topbar/topbar.css
+++ b/react-blog/src/components/topbar/topbar.css
@@ -130,6 +130,8 @@ input[type=checkbox]{
     margin-left: 20vw;
     margin-right: 20vw;
     text-align: left;
+    height: 300px;
+    overflow: auto;
 }
 
 .topProfileList{
